k8s/infra/authelia/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  # labels:
  #   stonegarden.dev/inject-self-signed-root-ca: "true"
