k8s/infra/authelia/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: cwx
      sectionName: websecure
  hostnames:
    - "auth.chenwx.top"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 80
